docs : 세그먼트까지 정리완

--- a/_posts/Coding_Test/Baekjoon_Concept/2023-01-11-(백준_필수3)알고리즘 템플릿 - java.md
+++ b/_posts/Coding_Test/Baekjoon_Concept/2023-01-11-(백준_필수3)알고리즘 템플릿 - java.md
@@ -282,16 +282,6 @@ str.substring(3,5); String[] arr = str.split(""); // String의 경우
 Arrays.copyOfRange(원본배열, 시작, 끝); // 배열의 경우
 ```
 
-
-
-https://velog.io/@ryusuz/JAVA-%EC%BD%94%EB%94%A9%ED%85%8C%EC%8A%A4%ED%8A%B8%EC%9A%A9-%EC%A3%BC%EC%9A%94-%ED%95%A8%EC%88%98-%EB%AA%A8%EC%9D%8C
-
-https://velog.io/@alstjdwo1601/Java-%EC%BD%94%EB%94%A9%ED%85%8C%EC%8A%A4%ED%8A%B8-%EA%B4%80%EB%A0%A8-%ED%8C%81
-
-
-
-
-
 <br><br>
 
 ## BFS, DFS
@@ -744,11 +734,11 @@ public static void rotate() {
 [1, 2, 3]
 [4, 5, 6]
 [7, 8, 9]
-CW 회전 결과:
+CW(시계) 회전 결과:
 [7, 4, 1]
 [8, 5, 2]
 [9, 6, 3]
-CCW 회전 결과:
+CCW(반시계) 회전 결과:
 [3, 6, 9]
 [2, 5, 8]
 [1, 4, 7]
@@ -776,7 +766,7 @@ num.add(5); nums.add(2); num.add(8);
 Collections.sort(num); // 오름차순
 Collections.sort(num, Collections.reverseOrder()); // 내림차순
 
-// 3. sort 커스텀 => comp 수정
+// 3. sort 커스텀 => comp 수정 (Comparator 구현)
 static int[] order = {3,1,5};
 static Integer[] inArr = {1,2,0};
 public static void main(String[] args) {
@@ -919,7 +909,7 @@ while(p*p <= N) {
 ```java
 // 소인수분해
 for(int i = 2; i*i<=N; i++) { // √N 이하까지 돈다.
-    while(N%i == 0) {
+    while(N%i == 0) { // while문 (약수는 나누어 떨어져야 함)
         System.out.println(i); // 구한 소인수
         N/=i; // n이 1이 될때까지 갱신
     }
@@ -940,10 +930,23 @@ if(N!=1) System.out.println(N); // 마지막에 n이 1이 안될경우도 있는
 
 ```java
 // 최대공약수 -> (a, b) = (b, r)
+// (1) 재귀 방식
 public static int gcd(int a, int b) {
     if(b==0) return a;
     return gcd(b,a%b);
 }
+// (2) 반복문 방식 - 정수론의 정리 이용
+// 정리 : 두 정수 a(≥0)와 b(>0) 가 있을 때, a = b∙q+r (0 ≤r<b) 이면  gcd(a,b) = gcd(b,r) 이다.
+public static int gcd(int a, int b) {
+    int r1 = a; int r2 = b; // init
+    while(r2>0) {
+        int q = r1/r2; // 몫
+        int r = r1-r2*q; // 나머지 r = a-b*q
+        r1 = r2; r2 = r;
+    }
+    return r1;
+}
+
 // 최소공배수 -> A X B = GCD(A,B) X LCM(A,B)
 public static int lcm(int a, int b) {
     return a / gcd(a,b) * b; // overflow 방지 위해 나누기 먼저(곱셈이라 가능)
@@ -1014,7 +1017,7 @@ public static int chk() {
 
 **정렬되어 있는 배열에서 특정 데이터를 찾기 위해 모든 데이터를 탐색 범위를 절반으로 줄여가며 찾는 탐색 방법**
 
-*  **`Arrays.binarySearch(arr, target)` 함수를 활용** : 찾는 수가 등장했는지 안했는지를 알려줌(**오름차순에** 사용)
+*  **`Arrays.binarySearch(arr, target)` 함수를 활용** : 찾는 수가 등장했는지 안했는지를 이분탐색으로 알려줌(**오름차순에** 사용)
   * 물론, `sort` 처럼 범위 지정할 수 있다.
   * **단, `parametric search` 관련해서 구하려면 직접 `binarySearch` 를 작성 해줘야 한다.**
 
@@ -1074,8 +1077,8 @@ public static int lower_bound(int target, int len) {
     int en = len;
     while(st < en) {
         int mid = (st+en)/2;
-        if(a[mid] >= target) en = mid;
-        else st = mid+1;
+        if(a[mid] < target) st = mid+1;
+        else en = mid; // (a[mid] >= target)
     }
     return st;
 }
@@ -1084,8 +1087,8 @@ public static int upper_bound(int target, int len) {
     int en = len;
     while(st < en) {
         int mid = (st+en)/2;
-        if(a[mid] > target) en = mid;
-        else st = mid+1;
+        if(a[mid] <= target) st = mid+1;
+        else en = mid; // (a[mid] > target)
     }
     return st;
 }
@@ -1143,7 +1146,7 @@ public static int getID(char c) {
 * 예시로 **[수 고르기](https://www.acmicpc.net/problem/2230)** 를 풀어본다.
   * 아래 코드는 2개의 포인터를 적절히 조건에 맞게 움직여서 해를 구하는 모습이다.
 
-```c++
+```java
 // BOJ 2230
 Arrays.sort(inArr);
 int result=2000000100;
@@ -1178,62 +1181,71 @@ for(i = 0; i<N; i++){
 
 <br>
 
-**해시 자료구조로 이루어진 STL**
+**해시 테이블을 기반으로 이루어진 라이브러리**
 
-* `unordered_set, unordered_multiset, unordered_map` 이며, multiset의 경우 중복을 허용
-  * Python 의 set, dict 자료구조랑 유사
-  * 사실 unordered_multimap 도 존재하는데 사용할 일이 거의 없음
-* 이름이 비슷한 BST 자료구조인 `set, multiset, map` 과 구분할 것
-  * **근데 해시보단 `set, map` 들 사용을 추천** 
-  * 왜?? `insert, erase, find update` 동작이 해시는 **O(1), RBT는 O(logN)** 이지만,
-  * RBT는 원소가 크기 순으로 정렬되어 있다는 큰 장점이 있다. 즉, lower_bound같은걸 logN에 바로 구할 수 있다.
+* `HashSet, HashMap, LinkdedHashMap(참고)` 이 3개만 기억
+  * Python 의 **set, dict** 자료구조랑 유사
+    * **set** : value만 존재 => **중복 불가**에 주로 사용
+      * 특히 순서를 지키지 않기 때문에 get하려면 처음부터 순회(iteration)를 통해서 구해야하므로 이런 경우 반드시 map을 사용 권장
+    * **map** : key, value 쌍으로 존재 => **보통 이것**을 사용
+      * 조회할 때 최적화 하려면 **entrySet** 을 활용
+  * **LinkdedHashMap**는 순서를 지키고 싶을때 사용(물론 set도 존재)
+* 이름이 비슷한 **BST 자료구조**인 `TreeSet, TreeMap` 과 구분할 것
+  * BST는 정렬 순서를 유지하는 대신에 해시보다 느리므로, **"속도, 정렬" 2가지를 놓고 자료구조 선택**하면 된다.
+    * `insert, erase, find update` 동작이 해시는 **O(1), RBT는 O(logN)**
+    * 그러나, RBT는 원소가 크기 순으로 정렬되어 있다는 큰 장점이 있다. 
+      * 즉, 정렬되어 있다 보니**lower_bound** 같은걸 **logN**에 바로 구할 수 있다.
 
-```c++
-#include <unordered_set>
-#include <unordered_map>
-// unordered_set
-void unordered_set_example() {
-	unordered_set<int> s;
-	s.insert(-10); s.insert(100); s.insert(15); // {-10, 100, 15}
-	s.insert(-10); // {-10, 100, 15}
-	cout << s.erase(100) << '\n'; // {-10, 15}, 출력:1
-	cout << s.erase(20) << '\n'; // {-10, 15}, 출력:0
-	if (s.find(15) != s.end()) cout << "15 in s\n";
-	else cout << "15 not in s\n";
-	cout << s.size() << '\n'; // 2
-	cout << s.count(50) << '\n'; // 0 => 수가 몇개있는지 카운트
-	for (auto e : s) cout << e << ' ';
+```java
+// 1. HashSet
+HashSet<String> hs = new HashSet<>();
+hs.add("java");
+System.out.println(hs.contains("java")); // true
+
+// 2. HashMap
+HashMap<String, Integer> hm = new HashMap<>();
+hm.put("java", 0); // save => 기존 값이 있어도 덮어씌움
+hm.get("java"); // load
+// 키(="java")가 없으면 put으로 새로 생성
+if (!hm.containsKey("java")) hm.put("java", 1); 
+// 키(="java")가 있으면 해당 값 출력, 없으면 설정한 defalut값(=3) 출력
+hm.getOrDefault("java", 3);
+// 키가 있으면 1씩 증가시키는 응용방식!
+hm.put("java", hm.getOrDefault("java", 0)+1);
+// keySet() 함수로 맵 순회
+for(String key : hm.keySet()) { 
+	hm.get(key); // 순서가 보장되지 않음
+}
+       
+// 3. LinkdedHashMap => 값들 HashMap이라 동일하다 가정
+for(String key : hm.keySet()) {				
+	lhm.get(key); // 순서가 보장
+}
+```
+
+<br>
+
+**keySet, entrySet 를 적절히 사용해야 최적화 할 수 있다.**
+
+* key만 순회할 때 keySet 은 적절하다. 단, value도 필요할 때는??
+* value도 필요할 때는 entrySet 이 적절하다.
+  * `hm.get(key)` 를 하는 순간 또 keySet을 찾는 과정을 반복하기 때문이다. (자세한 내용을 아래링크)
+  * **참고 링크 : [entrySet 사용이유](https://codevang.tistory.com/289)**
+
+```java
+// 비권장
+for (String key : hm.keySet()) { // keySet을 하고
+    if (hm.get(key) != 0) { // hm.get(key)를 하는것은 비권장
+        answer = key;
+    }
 }
 
-// unordered_multiset
-// 중복 허용이며 erase를 그냥쓰면 전체 삭제 되기 때문에 조심
-void unordered_multiset_example() {
-	unordered_multiset<int> ms;
-	ms.insert(-10); ms.insert(100); ms.insert(15); // {-10, 100, 15}
-	ms.insert(-10); ms.insert(15); // {-10, -10, 100, 15, 15}
-	cout << ms.size() << '\n'; // 5
-	for (auto e : ms) cout << e << ' ';
-	cout << '\n';
-	cout << ms.erase(15) << '\n'; // {-10, -10, 100}, 출력:2 => 삭제 개수
-	ms.erase(ms.find(-10)); // {-10, 100} => 1개는 이렇게 삭제해줘야 함
-	ms.insert(100);
-	cout << ms.count(100) << '\n'; // 2 => 수가 몇개있는지 카운트
-}
-
-// unordered_map
-// python의 dict처럼 쓰면 됨
-void unordered_map_example() {
-	unordered_map<string, int> m;
-	m["hi"] = 123;
-	m["bkd"] = 1000;
-	m["gogo"] = 165; // {"hi", 123}, {"bkd", 1000}, {"gogo", 165}
-	cout << m.size() << '\n'; // 3
-	m["hi"] = -7; // {"hi", -7}, {"bkd", 1000}, {"gogo", 165}
-	if (m.find("hi") != m.end()) cout << "hi in m\n";
-	else cout << "hi not in m\n";
-	m.erase("bkd"); // {"hi", -7}, {"gogo", 165}
-	for (auto e : m)
-		cout << e.first << ' ' << e.second << '\n';
+// 권장
+for (Entry<String, Integer> entry : hm.entrySet()) {
+    if (entry.getValue() > 0) {
+        answer = entry.getKey();
+        break;
+    }
 }
 ```
 
@@ -1241,86 +1253,62 @@ void unordered_map_example() {
 
 ## 이진 검색, 레드-블랙 트리(BST, RBT)
 
-**c++에서 STL에는 이진 검색 트리 + 자가 균형을 이루는 RBT 자료 구조로 정의되어서 제공한다.**
+**자바의 `TreeSet, TreeMap` 은 이진 검색 트리 + 자가 균형을 이루는 RBT 자료 구조로 정의되어서 제공한다.**
 
 **참고로 BST를 구현을 해야할 것 같을때는 배열로는 구현X, 차라리 class로 구현하자.**
 
-**해시에서 비교를 했기 때문에 자세한 설명은 생략**
+**해시에서 비교를 했기 때문에 간단히 설명**
+
+* TreeSet : 중복된 데이터의 저장을 허용하지 않으며, 정렬된 위치에 저장하므로 저장 순서를 유지하지도 않는다.
+  * 여전히 get메소드 없고, iterator를 사용
+* TreeMap : TreeSet과 동일한데 추가로 key, value 쌍으로 저장된다.
 
 * prev, next나 lower_bound 이런게 필요할 때 유용
 * 개념 정리 게시글 참고 : [고급트리 개념](https://bh946.github.io/algorithm/(%EA%B3%A0%EA%B8%89%EA%B0%9C%EB%85%90)-%EA%B3%A0%EA%B8%89-%ED%8A%B8%EB%A6%AC(BST,-RBT,-Splay,-OST,-Range,-Interval,-Sgement)/)
 
-```c++
-#include<set>
-#include<map>
-void set_example() {
-	set<int> s;
-	s.insert(-10); s.insert(100); s.insert(15); // {-10, 15, 100}
-	s.insert(-10); // {-10, 15, 100}
-	cout << s.erase(100) << '\n'; // {-10, 15}, 1
-	cout << s.erase(20) << '\n'; // {-10, 15}, 0
-	if (s.find(15) != s.end()) cout << "15 in s\n";
-	else cout << "15 not in s\n";
-	cout << s.size() << '\n'; // 2
-	cout << s.count(50) << '\n'; // 0
-	for (auto e : s) cout << e << ' ';
-	cout << '\n';
-	s.insert(-40); // {-40, -10, 15}
-	set<int>::iterator it1 = s.begin(); // {-40(<-it1), -10, 15}
-	it1++; // {-40, -10(<-it1), 15}
-	auto it2 = prev(it1); // {-40(<-it2), -10, 15}
-	it2 = next(it1); // {-40, -10, 15(<-it2)}
-	advance(it2, -2); // {-40(<-it2), -10, 15}
-	auto it3 = s.lower_bound(-20); // {-40, -10(<-it3), 15}
-	auto it4 = s.find(15); // {-40, -10, 15(<-it4)}
-	cout << *it1 << '\n'; // -10
-	cout << *it2 << '\n'; // -40
-	cout << *it3 << '\n'; // -10
-	cout << *it4 << '\n'; // 15
+```java
+// 1. TreeSet
+TreeSet<Integer> ts = new TreeSet<>();
+ts.add(2);
+ts.add(4);
+ts.add(3);
+ts.add(5);
+ts.add(1);
+ts.add(1); // 중복 x
+System.out.println(ts.contains(0));	// true
+System.out.println(ts.size()); // 5
+System.out.println(ts.headSet(3)); //처음 ~ 3 전까지
+System.out.println(ts.tailSet(3)); //3 ~ 끝까지
+System.out.println(ts.subSet(3, 5)); //3 ~ 5 전까지
+Iterator<Integer> iter = ts.iterator();
+while(iter.hasNext()) {
+    System.out.print(iter.next());
 }
+System.out.println();
 
-void multiset_example() {
-	multiset<int> ms;
-	// {-10, 15, 100}
-	ms.insert(-10); ms.insert(100); ms.insert(15); // {-10, -10, 15, 15, 100}  
-	ms.insert(-10); ms.insert(15);
-	cout << ms.size() << '\n'; // 5
-	for (auto e : ms) cout << e << ' ';
-	cout << '\n';
-	cout << ms.erase(15) << '\n'; // {-10, -10, 100}, 2
-	ms.erase(ms.find(-10)); // {-10, 100}
-	ms.insert(100); // {-10, 100, 100}
-	cout << ms.count(100) << '\n'; // 2
-	auto it1 = ms.begin(); // {-10(<-it1), 100, 100}
-	auto it2 = ms.upper_bound(100); // {-10, 100, 100} (<-it2)
-	auto it3 = ms.find(100); // {-10, 100(<-it3), 100}
-	cout << *it1 << '\n'; // -10
-	cout << (it2 == ms.end()) << '\n'; // 1
-	cout << *it3 << '\n'; // 100
-}
-
-void map_example() {
-	map<string, int> m;
-	m["hi"] = 123;
-	m["bkd"] = 1000;
-	m["gogo"] = 165; // ("bkd", 1000), ("gogo", 165), ("hi", 123)
-	cout << m.size() << '\n'; // 3
-	m["hi"] = -7;  // ("bkd", 1000), ("gogo", 165), ("hi", -7)
-	if (m.find("hi") != m.end()) cout << "hi in m\n";
-	else cout << "hi not in m\n";
-	m.erase("bkd"); // ("gogo", 165), ("hi", 123)
-	for (auto e : m)
-		cout << e.first << ' ' << e.second << '\n';
-	auto it1 = m.find("gogo");
-	cout << it1->first << ' ' << it1->second << '\n'; // gogo 165
-}
+// 2. TreeMap
+TreeMap<String, Integer> tm = new TreeMap<>();
+tm.put("TreeMap1", 10);
+tm.put("TreeMap2", 20);
+tm.put("TreeMap3", 30);
+System.out.println(tm.get("TreeMap3")); //30
+System.out.println(tm.containsKey("TreeMap3"));	//true
+System.out.println(tm.size()); // 3
+System.out.println(tm.firstKey()); //처음 Key값
+System.out.println(tm.lastKey());  //마지막 Key값
+System.out.println(tm.firstEntry()); //처음 Entry값
+System.out.println(tm.lastEntry()); //마지막 Entry값
+System.out.println(tm.headMap("TreeMap2")); //처음 ~ TreeMap2 전까지
+System.out.println(tm.tailMap("TreeMap2")); //TreeMap2 ~ 끝까지
+System.out.println(tm.subMap("TreeMap1", "TreeMap3")); //TreeMap1 ~ TreeMap2 까지
 ```
 
 <br><br>
 
 ## 우선순위 큐
 
-**우선순위 큐는 pop을 할 때 가장 먼저 들어온 원소가 나오는 대신 우선순위가 가장 높은 원소가 나오는 큐이다.**
+**우선순위 큐는 pop을 할 때 가장 먼저 들어온 원소가 나오는 대신 우선순위가 가장 높은 원소가 나오는 큐이다. **  
+**힙은 완전 이진트리로 구성된 자료구조 이다.**
 
 **힙(최대 힙, 최소 힙) 자료구조를 사용해서 만든 우선순위 큐**
 
@@ -1328,9 +1316,9 @@ void map_example() {
 * 우선순위 높은 원소 확인 - O(1)
 * 우선순위 높은 원소 제거 - O(logN)
 * **배열 자료구조 + 우선순위 큐의 경우 => 순서대로 O(1), O(N), O(N)**
-* `set` 도 최소값과 최대값을 빼고, 원소 추가하고 다 가능하고 복잡도도 심지어 동일하다.
-  * 그래도 굳이 `priority_queue` 를 사용하는 이유는 같은 O(logN)이라고 해도 `set` 보다 빠르고, 공간도 적게 차지한다.
-  * **따라서 `priority_queue` 의 기능만 딱 필요할 경우엔 `set`이 아닌 `priority_queue` 를 사용해주자!**
+* `TreeSet` 도 최소값과 최대값을 빼고, 원소 추가하고 다 가능하고 복잡도도 심지어 동일하다.
+  * 그래도 굳이 `priority_queue` 를 사용하는 이유는 같은 O(logN)이라고 해도 `TreeSet` 보다 빠르고, 공간도 적게 차지한다.
+  * **따라서 `priority_queue` 의 기능만 딱 필요할 경우엔 `TreeSet`이 아닌 `priority_queue` 를 사용해주자!**
 
 <br>
 
@@ -1348,24 +1336,57 @@ void map_example() {
 
 <br>
 
-**STL `priority_queue` 제공!!**
+**`PriorityQueue` 제공!!**
 
-```c++
-#include <queue>
-int main() {
-    priority_queue<int> pq; // 최대 힙 (기본값)
-    // priority_queue<int, vector<int>, greater<int>>로 선언시 최소 힙
-    pq.push(10); pq.push(2); pq.push(5); pq.push(9); // {10, 2, 5, 9}
-    cout << pq.top() << '\n'; // 10
-    pq.pop(); // {2, 5, 9}
-    cout << pq.size() << '\n'; // 3
-    if (pq.empty()) cout << "PQ is empty\n";
-    else cout << "PQ is not empty\n";
-    pq.pop(); // {2, 5}
-    cout << pq.top() << '\n'; // 5  
-    pq.push(5); pq.push(15); // {2, 5, 5, 15}
-    cout << pq.top() << '\n'; // 15  
-    return 0;
+```java
+PriorityQueue<Integer> pq = new PriorityQueue<Integer>(); // 최소힙
+PriorityQueue<Integer> pq = new PriorityQueue<Integer>(Collections.reverseOrder()); // 최대힙
+
+pq.add(3);
+pq.remove();
+pq.peek(); // root
+```
+
+<br>
+
+**우선순위 비교를 직접 커스텀 할 경우!!**
+
+```java
+public static void main(String[] args) throws IOException {
+    PriorityQueue<Pair> pq=new PriorityQueue<>(Pair::compareTo);
+    pq.add(new Pair(1,2));
+    pq.add(new Pair(1,1));
+    pq.add(new Pair(2,3));
+    pq.add(new Pair(2,1));
+
+    while(!pq.isEmpty()){
+        Pair p=pq.peek(); // root
+        System.out.println(p.first+" "+p.second);
+        pq.remove();
+    }
+}
+
+static class Pair {
+    int first;
+    int second;
+
+    public Pair(int first, int second) {
+        this.first = first;
+        this.second = second;
+    }
+
+    // Pair 클래스 내에 비교 함수!!
+    public int compareTo(Pair p) {
+        if(this.second < p.second) {
+            return -1; // 음수는 오름차순
+        }
+        else if(this.second == p.second) {
+            if(this.first < p.first) {
+                return -1;
+            }
+        }
+        return 1;
+    }
 }
 ```
 
@@ -1373,82 +1394,70 @@ int main() {
 
 ## 그래프
 
-**그래프는 인접행렬과 인접리스트(list보다 vector가 더 편함)로 표현할 수 있다.**
+**그래프는 인접행렬과 인접리스트로 표현할 수 있다.**
 
 * **보통 인접리스트 사용이 많고, E가 V^2보다 훨씬 작을 때(sparse=희소) 사용한다.**
-* **모든 간선 길이가 동일하면 BFS로 거리를 구할 수 있고, 길이가 다르다면 플로이드나 다익스트라 알고리즘을 활용해야 한다.**
+* **`모든 간선 길이가 동일` 하면 "BFS"로 거리를 구할 수 있고, `길이가 다르다면` "플로이드, 다익스트라" 알고리즘을 활용해야 한다.**
 
 <br>
 
-**그래프를 BFS, DFS**
+### 1. 그래프의 BFS, DFS 순회
 
-```c++
+**이미 BFS, DFS는 정리했었고 여기선 추가 보충을 위해 `"인접리스트"` 형태로 접근하는 것과 `DFS 재귀` 방식을 소개한다.**
+
+```java
 // 연결 그래프 BFS 순회
 // 만약, 노드들 중에 연결 그래프 아닌것도 순회하고 싶으면 그냥 모든 노드를 돌리면 됨
 // 즉, 아래 코드를 전체 for문으로 감싸고, 1 대신 for문의 i로 변경
-vector<int> vc[10];
-bool visited[10];
-void bfs() {
-	queue<int> qu;
-	qu.push(1);
-	visited[1] = true;
-	while (!qu.empty()) {
-		int cur = qu.front();
-		qu.pop();
-		cout << cur << ' ';
-		for (auto next : vc[cur]) {
-			if (visited[next]) continue;
-			qu.push(next);
-			visited[next] = true;
-		}
-	}
-}
-
-// 연결 그래프 BFS 거리
-vector<int> vc[10];
-int dist[10];
-void bfs() {
-    fill(dist, dist+10, -1);
-	queue<int> qu;
-	qu.push(1);
-	dist[1] = 0;
-	while (!qu.empty()) {
-		int cur = qu.front();
-		qu.pop();
-		for (auto next : vc[cur]) {
-			if (dist[next]!=-1) continue;
-			qu.push(next);
-			dist[next] = dist[cur]+1;
+static List<Integer>[] inArr = new ArrayList[10];
+static boolean[] visited = new boolean[10];
+static void bfs() {
+    for(int i = 0 ;i<10;i++){
+        inArr[i] = new ArrayList<Integer>();
+        inArr[i].add((i+1)%10);
+    } // 임의로 "인접리스트" 형태로 값 삽입
+	Queue<Integer> qu = new LinkedList<>();
+    qu.add(0);
+    visited[0] = true;
+	while(!qu.isEmpty()) {
+		int cur = qu.peek();
+		qu.remove();
+		System.out.println(cur);
+		for (int nxt : inArr[cur]) {
+			if (visited[nxt]) continue;
+			qu.add(nxt);
+			visited[nxt] = true;
 		}
 	}
 }
 
 // DFS 재귀 (비재귀는 위 BFS에서 큐->스택)
-vector<int> vc[10];
-bool visited[10];
-void dfs(int cur) {
+static List<Integer>[] inArr = new ArrayList[10];
+static boolean[] visited = new boolean[10];
+static void dfs(int cur) {
     visited[cur] = true;
-    cout << cur << ' ';
-    for(auto next : vc[cur]) {
-        if(visited[next]) continue;
-        dfs(next);
+    System.out.println(cur);
+    for (int nxt : inArr[cur]) {
+        if(visited[nxt]) continue;
+        dfs(nxt);
     }
 }
 
-// 필자가 항상 작성하던 DFS 재귀 방식 (최대 depth(깊이)를 지정했었음)
+// 항상 작성하던 DFS 재귀 방식 (최대 depth(깊이)를 지정했었음)
 // 장점 : 원하는 개수만큼 만 접근이 가능
-void dfs(int depth, vector<int> val) {
+static List<Integer>[] inArr = new ArrayList[10];
+static void dfs(int depth, List<Integer> val) {
 	if (depth == 4) { // base condition
 		result = 1;
 		return;
 	}
 	
-	for (auto next : val) {
-		if (!visited[next]) {
-			visited[next] = true;
-			dfs(depth + 1, inArr[next]);
-			// visited[next] = false; // backtracking
-		}
+	for (int nxt : val) {
+		if (visited[nxt]) continue;
+        visited[nxt] = true;
+        outArr[depth] = nxt; // 출력할 값 기록
+        dfs(depth + 1, inArr[nxt]);
+        // visited[nxt] = false; // backtracking
 	}
 }
 ```
@@ -1471,23 +1480,23 @@ void dfs(int depth, vector<int> val) {
 * 트리를 **BFS** 할 때 root부터 하므로 임의의 노드에서 그 노드의 부모는 이미 방문한거고, 자식들만 방문을 안한 상태인 것이다.
 * 따라서 따로 **visited배열이 필요없이 p배열(부모)** 을 알고 있으면 된다.
 
-```c++
+```java
 // DFS는 큐->스택 바꾸면 동일하게 동작
-vector<int> vc[10];
-int p[10];
-int depth[10];
-void bfs(int root) {
-    queue<int> qu;
-    qu.push(root);
-    while(!qu.empty()) {
-        int cur = qu.front();
-        qu.pop();
-        cout << cur << ' ';
-        for (int next : vc[cur]) {
-            if(p[cur] == next) continue; // 부모는 방문한 상태라서 continue
-            qu.push(next);
-            p[next] = cur; // parent 기록
-            depth[next] = depth[cur] + 1; // dist배열 채우듯이 동일
+static List<Integer>[] inArr = new ArrayList[10];
+static int[] p = new int[10]; // 부모 배열
+static int[] depth = new int[10]; // 트리 깊이 기록
+static void bfs(int root) {
+	Queue<Integer> qu = new LinkedList<>();
+    qu.add(root);
+    while(!qu.isEmpty()) {
+        int cur = qu.peek();
+        qu.remove();
+		System.out.println(cur);
+        for (int nxt : inArr[cur]) {
+            if(p[cur] == nxt) continue; // 부모는 방문한 상태라서 continue
+            qu.add(nxt);
+            p[nxt] = cur; // parent 기록
+            depth[nxt] = depth[cur] + 1; // dist배열 채우듯이 동일
         }
     }
 }
@@ -1497,9 +1506,9 @@ void bfs(int root) {
 
 ### 2. 이진 트리의 순회
 
-* **레벨 순회** : 높이 순서대로 방문한다.
+* **레벨 순회(=bfs(root))** : 높이 순서대로 방문한다.
   * 기존이랑 **동일**. root를 시작점으로 **bfs** 돌리면 높이 순서대로 위에서부터 차례로 순회한다.
-* 전위, 중위, 후위 순회
+* **전위, 중위, 후위 순회**
   * 전위 : 위 -> 왼 -> 오
   * 중위 : 왼 -> 위 -> 오
   * 후위 : 왼 -> 오 -> 위
@@ -1513,100 +1522,116 @@ void bfs(int root) {
 
 * 리프 노드: 배열의 연속된 값 그 자체
 * 내부 노드: 왼쪽 자식과 오른쪽 자식의 합
+* **아래 그림을 꼭 기억하면 충분히 segmentBuild 함수정도는 만들 수 있을 것이다.**
+  * **재귀를 너무 이해하려고 하는것 보다 아래 상태공간 트리를 재귀함수로 짜려고 노력하는게 중요하다.**
+
+
+![image-20230526215318317](/images/2023-01-11-(백준_필수3)알고리즘 템플릿 - java/image-20230526215318317.png)
 
 <br>
 
 ```c++
-/*
-아래 코드는 "구간 합 구하기" 백준 문제를 풀었던 코드를 예시로 가져옴
+/**
+ * BOJ 2042
+ * 구간 합 구하는 함수 : segmentSum
+ * 트리의 노드 수정하는 함수 : segmentUpdate
+ * 세그먼트 트리 만드는 함수 : segmentBuild
+ */
+static int N, M, K;
+static long[] inArr;
+static long[] outArr;
 
-구간 합 구하는 함수 : segmentSum
-트리의 노드 수정하는 함수 : segmentUpdate
-*/
+// node(outArr)가 담당하는 구간 : start, end
+public static long segmentBuild(int start, int end, int node) {
+    if(start == end) { // base condition
+        outArr[node] = inArr[start];
+        return outArr[node];
+    }
 
-#include<iostream>
-#include<vector>
-#include<cmath>
-using namespace std;
-
-long long inArr[2000010];
-long long outArr[5000010];
-
-// 재귀함수(세그먼트 트리 만드는)
-long long segmentBuild(int start, int end, int node) {
-	if (start == end) { // base condition
-		outArr[node] = inArr[start];
-		return outArr[node]; // 종료시점
-	}
-
-	int mid = (start + end) / 2; // mid 구해서 왼, 오 구간 나눔
-	outArr[node] = segmentBuild(start, mid, node * 2) + segmentBuild(mid + 1, end, node * 2 + 1);
-	return outArr[node]; // base condition (사실 바로 위 코드에 return 같이 적어도됨)
+    int mid = (start+end) / 2; // 왼, 오 구간 나누기
+    outArr[node] = segmentBuild(start, mid, node*2) + segmentBuild(mid+1, end, node*2+1);
+    return outArr[node];
 }
 
+// 구하는 합 구간 : left, right
+public static long segmentSum(int start, int end, int left, int right, int node) {
+    // 1. 겹치지 않는 경우 => base condition
+    if((left < start && right < start) || (left > end && right > end)) return 0;
 
-// 구하는 합 구간 left, right
-// node가 담당하는 구간 start, end
-long long segmentSum(int start, int end, int node, long long left, long long right) {
-	// 1. 겹치지 않는 경우 (left, right가 start, end의 왼쪽이거나 오른쪽 구간인 경우)
-	if ((left < start && right < start) || (left > end && right > end)) return 0;
-	
-	// 2. 완전히 포함하는 경우 (left, right가 start, end를 완전히 포함하는 경우)
-	if (left <= start && right >= end) return outArr[node];
+    // 2. 완전히 포함되는 경우 => base condition
+    if(left <= start && right >= end) return outArr[node];
 
-	// 3. 나머지 경우 (자식 트리 탐색)
-	int mid = (start + end) / 2;
-	return segmentSum(start, mid, node * 2, left, right) + segmentSum(mid + 1, end, node * 2 + 1, left, right);
+    // 3. 나머지 경우(자식 트리 탐색) => 왼, 오 탐색
+    int mid = (start+end) / 2;
+    return segmentSum(start, mid, left, right, node*2) + segmentSum(mid+1, end, left, right, node*2+1);
 }
 
-// node가 담당하는 구간 start, end
-// 수정할 노드 index, 수정할 값 dif
-void segmentUpdate(int start, int end, int node, long long index, long long dif) {
-	// 1. 겹치지 않는 경우 (왼쪽이거나 오른쪽 구간인경우)
-	if ((start < index && end < index) || (start > index && end > index)) return;
-	// 2. left, right가 start, end를 완전히 포함하는 경우
-	if (start <= index && index <= end) outArr[node] += dif;
-	
-	// 무조건 종료시점(무한루프 안걸리게)
-	if (start == end) return;
-	// 3. 나머지 경우 (자식 트리 탐색)
-	int mid = (start + end) / 2;
-	segmentUpdate(start, mid, node * 2, index, dif);
-	segmentUpdate(mid + 1, end, node * 2 + 1, index, dif);
+// 수정할 노드 인덱스 : idx, 수정할 값 : dif
+public static void segmentUpdate(int start, int end, int idx, long dif, int node) {
+    // 1. 겹치치 않는 경우
+    if((start < idx && end < idx) || (start > idx && end > idx)) return;
+    // 2. 완전히 포함되는 경우
+    if(start <= idx && end >= idx) outArr[node] += dif;
+
+    // base condition (무한루프 안빠지게)
+    if(start==end) return;
+    // 3. 나머지 경우(자식 트리 탐색)
+    int mid = (start+end) /2;
+    segmentUpdate(start, mid, idx, dif, node*2);
+    segmentUpdate(mid+1, end, idx, dif, node*2+1);
 }
 
-int N, M, K;
+public static void main(String[] args) throws IOException {
+    // input
+    BufferedReader br = new BufferedReader(new InputStreamReader(System.in));
+    StringTokenizer stk = new StringTokenizer(br.readLine(), " ");
+    N = Integer.parseInt(stk.nextToken());
+    M = Integer.parseInt(stk.nextToken());
+    K = Integer.parseInt(stk.nextToken());
+    inArr = new long[N];
+    outArr = new long[N*4];
+    for(int i = 0 ;i <N; i++){
+        inArr[i] = Long.parseLong(br.readLine());
+    }
+    // run & output
+    StringBuilder sb = new StringBuilder();
+    segmentBuild(0, N-1, 1); // 인덱스 1부터 저장해야 인덱스 연산 편안
+    for(int i = 0 ; i<M+K; i++){
+        stk = new StringTokenizer(br.readLine(), " ");
+        int a = Integer.parseInt(stk.nextToken());
+        int b = Integer.parseInt(stk.nextToken());
+        long c = Long.parseLong(stk.nextToken()); // type 조심
 
-int main() {
-	ios_base::sync_with_stdio(0); cin.tie(0); cout.tie(0);
-	cin >> N >> M >> K;
-
-	for (int i = 0; i < N; i++) {
-		cin >> inArr[i];
-	}
-	segmentBuild(0, N-1, 1); // outArr 수정(index 1부터 저장)
-
-	long long a = 0;
-	long long b = 0;
-	long long c = 0;
-	for (int i = 0; i < M + K; i++) {
-		cin >> a >> b >> c;
-		if (a == 1) {
+        if(a==1) {
+            // segmentUpdate
             // b번째 수에 c를 더하는게 아닌,
-			// b번째 수를 c로 바꿔야 하는건 `c-inArr[b-1]` 로 바꿔야 한다는 의미이다.
-			segmentUpdate(0, N-1, 1, b-1, c-inArr[b-1]);
-			inArr[b - 1] = c; // b->c로 변환 (`c-inArr[b-1]` 에 사용되니까 바꿔줘야함)
-		}
-		else if (a == 2) {
-			cout << segmentSum(0, N-1, 1, b-1, c-1) << '\n';
-		}
-	}
-
-	return 0;
+            // b번째 수를 c로 바꿔야 하는건 `c-inArr[b-1]` 를 더해야 한다는 의미이다.
+            segmentUpdate(0, N-1, b-1, c-inArr[b-1], 1);
+            inArr[b-1] = c; // b번째 수를 값 c로 변환
+        } else{ // a==2
+            // segmentSum
+            sb.append(segmentSum(0, N-1, b-1, (int)c-1, 1)).append('\n');
+        }
+    }
+    System.out.println(sb);
 }
 ```
 
 <br><br>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 ## 위상 정렬
 
