docs : 위상정렬 정리

--- a/_posts/Coding_Test/Baekjoon_Concept/2023-01-11-(백준_필수3)알고리즘 템플릿 - java.md
+++ b/_posts/Coding_Test/Baekjoon_Concept/2023-01-11-(백준_필수3)알고리즘 템플릿 - java.md
@@ -1619,51 +1619,80 @@ public static void main(String[] args) throws IOException {
 
 <br><br>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 ## 위상 정렬
 
 **위상 정렬(Topological Sort) : 방향 그래프에서 간선으로 주어진 정점 간 선후관계를 위배하지 않도록 나열하는 정렬**
 
+* 단순히 부모 자식관계를 위배하지만 않으면 되므로 생각보다 간단한 정렬이다.
+* indegree가 0인게 제일 부모이며 최외각에 존재하는건 자명하다.
+
 ![image-20230506001732475](/images/2023-01-03-(백준_필수3)알고리즘 템플릿 - cpp/image-20230506001732475.png)
 
 ```c++
-vector<int> adj[10];
-int deg[10];
-int n; // N개의 정점있고 번호는 1~indexed
+// BOJ 2252
 
-queue<int> qu;
-vector<int> vc; // result
-for(int i=1; i<= n; i++)
-    if(deg[i] == 0) qu.push(i);
-while(!qu.empty()){
-    int cur = qu.front(); qu.pop();
-    vc.push_back(cur);
-    for(int next : adj[cur]) {
-        deg[next]--;
-        if(deg[next] == 0) qu.push(next);
+public static int N, M;
+public static List<Integer>[] inArr; // input (graph)
+public static List<Integer> outArr = new ArrayList<>(); // output
+public static int[] deg = new int[32005]; // 0 init
+
+public static void main(String[] args) throws IOException {
+    // input
+    BufferedReader br = new BufferedReader(new InputStreamReader(System.in));
+    StringTokenizer stk = new StringTokenizer(br.readLine(), " ");
+    N = Integer.parseInt(stk.nextToken());
+    M = Integer.parseInt(stk.nextToken());
+    inArr = new ArrayList[N+5];
+    for(int i = 1 ; i<=N;i++) inArr[i] = new ArrayList<>(); // init
+    for(int i = 0 ;i<M;i++){
+        stk = new StringTokenizer(br.readLine(), " ");
+        int a = Integer.parseInt(stk.nextToken());
+        int b = Integer.parseInt(stk.nextToken());
+        inArr[a].add(b); // graph (방향 그래프)
+        deg[b] += 1; // indegree
     }
-}
-if(vc.size() != n)
-    cout << "cycle exists";
-else {
-    for(auto x : vc) cout << x << ' ';
+
+    // run
+    Queue<Integer> qu = new LinkedList<>();
+    for(int i = 1; i<=N; i++)
+        if(deg[i]==0) qu.add(i); // indegree 0 이 젤 최외각
+    while(!qu.isEmpty()) {
+        int cur = qu.peek();
+        qu.remove();
+        outArr.add(cur);
+        for(int nxt : inArr[cur]) {
+            deg[nxt]--;
+            if(deg[nxt] == 0) qu.add(nxt);
+        }
+    }
+
+    // output
+    StringBuilder sb = new StringBuilder();
+    for(int num : outArr) sb.append(num).append(' ');
+    System.out.println(sb);
+
+    if(outArr.size() != N)
+        System.out.println("cycle exists");
 }
 ```
 
 <br><br>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 ## 최소 신장 트리
 
@@ -1716,12 +1745,6 @@ else {
 ![image-20230506015237505](/images/2023-01-03-(백준_필수3)알고리즘 템플릿 - cpp/image-20230506015237505.png)
 
 ![image-20230506015246272](/images/2023-01-03-(백준_필수3)알고리즘 템플릿 - cpp/image-20230506015246272.png)
-
-<br><br>
-
-## ?? KMP, 트라이 남음
-
-
 
 <br><br>
 
