--- a/_posts/Coding_Test/Baekjoon_Concept/2023-01-11-(백준_필수3)알고리즘 템플릿 - java.md
+++ b/_posts/Coding_Test/Baekjoon_Concept/2023-01-11-(백준_필수3)알고리즘 템플릿 - java.md
@@ -1530,7 +1530,7 @@ static void bfs(int root) {
 
 <br>
 
-```c++
+```java
 /**
  * BOJ 2042
  * 구간 합 구하는 함수 : segmentSum
@@ -1628,7 +1628,7 @@ public static void main(String[] args) throws IOException {
 
 ![image-20230506001732475](/images/2023-01-03-(백준_필수3)알고리즘 템플릿 - cpp/image-20230506001732475.png)
 
-```c++
+```java
 // BOJ 2252
 
 public static int N, M;
@@ -1706,6 +1706,15 @@ public static void main(String[] args) throws IOException {
 **크루스칼 알고리즘은 Union Find라는 알고리즘을 선행학습 하고 아래 코드를 이해할 것.**
 
 ![image-20230506012547858](/images/2023-01-03-(백준_필수3)알고리즘 템플릿 - cpp/image-20230506012547858.png)
+
+<br>
+
+```java
+3 3
+1 3 1
+2 3 -2
+1 2 1
+```
 
 <br>
 
