--- a/_posts/Coding_Test/Baekjoon_Concept/2023-01-11-(백준_필수3)알고리즘 템플릿 - java.md
+++ b/_posts/Coding_Test/Baekjoon_Concept/2023-01-11-(백준_필수3)알고리즘 템플릿 - java.md
@@ -1678,23 +1678,7 @@ public static void main(String[] args) throws IOException {
 
 <br><br>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-## 최소 신장 트리
+## 최소 신장 트리(MST)
 
 * **바킹독 : https://blog.encrypted.gg/1024**
 * **예전에 정리한 개념글 : [MST-Prim,Kruskal](https://bh946.github.io/algorithm/(%EA%B0%9C%EB%85%90)-Greedy-Algorithm(%ED%83%90%EC%9A%95%EC%A0%81%EC%9D%B8-%EC%95%8C%EA%B3%A0%EB%A6%AC%EC%A6%98)/#mst%EC%B5%9C%EC%86%8C%EB%B9%84%EC%9A%A9-%EC%8B%A0%EC%9E%A5%ED%8A%B8%EB%A6%AC)**
@@ -1710,10 +1694,79 @@ public static void main(String[] args) throws IOException {
 <br>
 
 ```java
-3 3
-1 3 1
-2 3 -2
-1 2 1
+// BOJ 1197
+/**
+MST - kruskal
+1. 비내림차순 정렬(가중치 기준) => 제일 작은 가중치부터 선택하려고 하는것
+2. Union Find(=합집합 찾기) 이용 : 같은 그래프에 속하는지를 판별하기 위함
+*/
+public static int[] p = new int[10005]; // 부모기록 배열(-1 init)
+static int find(int x) {
+    if(p[x] < 0) return x; // 부모가 없는경우 자신이 부모
+    return p[x] = find(p[x]); // 부모 찾을때 까지 재귀
+}
+static boolean isUnion(int u, int v) {
+    u = find(u); v = find(v); // u,v 노드의 root(각 집합에서의 root를 찾는것)
+    if(u==v) return true;
+    if(p[u] > p[v]) {
+        int temp = u;
+        u=v; v=temp;
+    } // swap(u,v)
+    p[u] += p[v]; // 자식이 많은쪽에 merge => 여기선 p[u]로
+    p[v] = u; // 부모 기록
+    return false;
+}
+
+public static void main(String[] args) throws IOException {
+    // input
+    BufferedReader br = new BufferedReader(new InputStreamReader(System.in));
+    StringTokenizer stk = new StringTokenizer(br.readLine(), " ");
+    int V = Integer.parseInt(stk.nextToken());
+    int E = Integer.parseInt(stk.nextToken());
+    List<Edge> inArr = new ArrayList<>(E); // 또는 그냥 배열로 고고
+    for(int i = 0;i<E;i++){
+        stk = new StringTokenizer(br.readLine(), " ");
+        int a = Integer.parseInt(stk.nextToken());
+        int b = Integer.parseInt(stk.nextToken());
+        int c = Integer.parseInt(stk.nextToken()); // 가중치
+        inArr.add(new Edge(a,b,c));
+    }
+
+    // run
+    // 1. 비내림차순 정렬(가중치 기준)
+    ObjectSort ob = new ObjectSort();
+    Collections.sort(inArr, ob);
+
+    // 2. Union Find(=합집합 찾기) 이용 : 같은 그래프에 속하는지를 판별하는 알고리즘
+    Arrays.fill(p, -1); // init
+    int result = 0;
+    int cnt = 0;
+    for(Edge edge : inArr){
+        if(isUnion(edge.a, edge.b)) continue;
+        result += edge.c;
+        cnt++;
+        if(cnt == V-1) break; // 종료 시점 (모든 노드 방문한 경우)
+    }
+
+    // output
+    System.out.println(result);
+}
+static class Edge {
+    int a;
+    int b;
+    int c;
+    public Edge(int a, int b, int c) {
+        this.a = a;
+        this.b = b;
+        this.c = c;
+    }
+}
+static class ObjectSort implements Comparator<Edge> {
+    @Override
+    public int compare(Edge o1, Edge o2) {
+        return o1.c - o2.c; // 오름차순
+    }
+}
 ```
 
 <br>
@@ -1721,6 +1774,24 @@ public static void main(String[] args) throws IOException {
 **프림 알고리즘은 우선순위 큐를 이용해서 구현을 하는데, 구현이 좀 복잡하다. 따라서 pass**
 
 <br><br>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 ## 최단 경로 트리
 
