docs : 최단거리 공부

--- a/_posts/Coding_Test/Baekjoon_Concept/2023-01-11-(백준_필수3)알고리즘 템플릿 - java.md
+++ b/_posts/Coding_Test/Baekjoon_Concept/2023-01-11-(백준_필수3)알고리즘 템플릿 - java.md
@@ -1785,22 +1785,18 @@ static class ObjectSort implements Comparator<Edge> {
 
 
 
-
-
-
-
-
-
-
-
 ## 최단 경로 트리
 
 * **바킹독 : https://blog.encrypted.gg/1035, https://blog.encrypted.gg/1037**
 * **예전에 정리한 개념글 : [Floyd](https://bh946.github.io/algorithm/(%EA%B0%9C%EB%85%90)-Dynamic_Programming(%EB%8F%99%EC%A0%81%EA%B3%84%ED%9A%8D%EB%B2%95)/#%EC%B5%9C%EB%8B%A8%EA%B1%B0%EB%A6%ACfloyd), [Dijkstra](https://bh946.github.io/algorithm/(%EA%B0%9C%EB%85%90)-Greedy-Algorithm(%ED%83%90%EC%9A%95%EC%A0%81%EC%9D%B8-%EC%95%8C%EA%B3%A0%EB%A6%AC%EC%A6%98)/#dijkstra%EB%8B%A4%EC%9D%B5%EC%8A%A4%ED%8A%B8%EB%9D%BC)**
+* **유형**
+  * 거리가 일정??? `BFS` 로 최단 거리 구하기
+  * 거리가 다르다??? `플로이드(n^3) or 다익스트라(n^2)` 로 구하기
+
 
 <br>
 
-**`플로이드 알고리즘`은 모든 정점 쌍 사이의 최단 경로를 구하는 알고리즘이라 O(n3)의 큰 복잡도를 가진다.  
+**`플로이드 알고리즘`은 모든 정점 쌍 사이의 최단 경로를 구하는 알고리즘이라 O(n<sup>3</sup>)의 큰 복잡도를 가진다.  
 다만, 구현이 3중 for문으로 간단히 할 수 있으며 n이 1000정도면 이 알고리즘을 써도 된다.**
 
 * 최단 거리 테이블(2차원) 이 채워진다 => 코드보면 d배열 관련인데 생각보다 쉬운 로직!
@@ -1809,6 +1805,80 @@ static class ObjectSort implements Comparator<Edge> {
 ![image-20230506013350391](/images/2023-01-03-(백준_필수3)알고리즘 템플릿 - cpp/image-20230506013350391.png)
 
 ![image-20230506013359812](/images/2023-01-03-(백준_필수3)알고리즘 템플릿 - cpp/image-20230506013359812.png)
+
+<br>
+
+```java
+// BOJ 11780
+// n이 100이라 플로이드 가능
+public static int[][] d = new int[105][105];
+public static int[][] p = new int[105][105];
+public static int n, m;
+
+public static void main(String[] args) throws IOException {
+    // input => 1 4 2, 1 4 1 처럼 들어올 수 도 있으니 처음부터 d 에 min 값으로 갱신하자.
+    BufferedReader br = new BufferedReader(new InputStreamReader(System.in));
+    StringTokenizer stk = new StringTokenizer(br.readLine());
+    n = Integer.parseInt(stk.nextToken());
+    stk = new StringTokenizer(br.readLine());
+    m = Integer.parseInt(stk.nextToken());
+    for(int i = 1 ; i<=n ;i++) {
+        Arrays.fill(d[i], 10000000);
+    }
+    for(int i = 1; i<=m; i++){
+        stk = new StringTokenizer(br.readLine(), " ");
+        int a = Integer.parseInt(stk.nextToken());
+        int b = Integer.parseInt(stk.nextToken());
+        int c = Integer.parseInt(stk.nextToken());
+        d[a][b] = Math.min(d[a][b], c);
+        p[a][b] = b; // 경유 경로 기록
+    }
+    for(int i = 1; i<=n;i++) d[i][i] = 0; // 자기 자신의 경로는 당연히 비용 0
+
+    // run => DP 방식(i,j,k만 잘이해하면 생각보다 간단)
+    for(int k = 1; k<=n; k++) { // k를 경유하는 곳이라 생각하면 됨.
+        for(int i = 1; i<=n; i++) { // i->j 를 가는 경로 비용을 구하는것
+            for(int j = 1; j<=n; j++) {
+                if(d[i][k]+d[k][j] < d[i][j]){
+                    d[i][j] = Math.min(d[i][j], d[i][k]+d[k][j]);
+                    p[i][j] = p[i][k]; // 경유 경로 기록
+                }
+            }
+        }
+    }
+
+    // output => 출력이 여러개 있음.
+    StringBuilder sb = new StringBuilder(); // 가중치 출력
+    for(int i = 1 ; i<=n;i++){
+        for(int j = 1; j<=n; j++){
+            if(d[i][j] == 10000000) sb.append(0).append(' ');
+            else sb.append(d[i][j]).append(' ');
+        }
+        sb.append('\n');
+    }
+    System.out.print(sb);
+
+    for(int i = 1; i<=n; i++) {
+        for(int j = 1; j<=n; j++) {
+            sb = new StringBuilder(); // 경로 출력
+            if(d[i][j] == 0 || d[i][j] == 10000000) {
+                System.out.println(0);
+                continue;
+            }
+            int st = i;
+            int sizes = 1;
+            while(st != j) { // 자기 자신 가리키는 순간 탈출
+                sb.append(st).append(' ');
+                st = p[st][j];
+                sizes++;
+            }
+            sb.append(j);
+            System.out.print(sizes);
+            System.out.println(" "+sb);
+        }
+    }
+}
+```
 
 <br>
 
