--- a/_posts/Coding_Test/Baekjoon_Concept/2023-01-11-(백준_필수3)알고리즘 템플릿 - java.md
+++ b/_posts/Coding_Test/Baekjoon_Concept/2023-01-11-(백준_필수3)알고리즘 템플릿 - java.md
@@ -1775,23 +1775,19 @@ static class ObjectSort implements Comparator<Edge> {
 
 <br><br>
 
-
-
-
-
-
-
-
-
-
-
 ## 최단 경로 트리
 
 * **바킹독 : https://blog.encrypted.gg/1035, https://blog.encrypted.gg/1037**
 * **예전에 정리한 개념글 : [Floyd](https://bh946.github.io/algorithm/(%EA%B0%9C%EB%85%90)-Dynamic_Programming(%EB%8F%99%EC%A0%81%EA%B3%84%ED%9A%8D%EB%B2%95)/#%EC%B5%9C%EB%8B%A8%EA%B1%B0%EB%A6%ACfloyd), [Dijkstra](https://bh946.github.io/algorithm/(%EA%B0%9C%EB%85%90)-Greedy-Algorithm(%ED%83%90%EC%9A%95%EC%A0%81%EC%9D%B8-%EC%95%8C%EA%B3%A0%EB%A6%AC%EC%A6%98)/#dijkstra%EB%8B%A4%EC%9D%B5%EC%8A%A4%ED%8A%B8%EB%9D%BC)**
 * **유형**
   * 거리가 일정??? `BFS` 로 최단 거리 구하기
-  * 거리가 다르다??? `플로이드(n^3) or 다익스트라(n^2)` 로 구하기
+  * 거리가 다르다??? `플로이드(모든정점-n^3) or 다익스트라(하나의정점-n^2)` 로 구하기
+    * `다익스트라` 의 경우 가중치 음수는 사용 못하는데, 이땐 `벨만포드` 알고리즘이라는 것을 사용한다. (필요시 공부해 볼 것)
+    * **중요한점**  
+      `플로이드` 는 모든 정점에서 모든 정점과의 최단 경로를 구하고,  
+      `다익스트라` 는 하나의 정점에서 모든 정점과의 최단 경로를 구한다.
+      * 이때, `다익스트라` 는 하나의 정점에서 하나의 정점과의 최단 경로를 구할 수 있다는 점도 이해하자. 
+      * 즉, 꼭 모든 정점과의 경로로만 생각하지말고, A->B 처럼 하나의 정점에서 하나의 정점의 최소경로로도 생각 할 수 있다고 이해하라는 것
 
 
 <br>
@@ -1896,7 +1892,110 @@ public static void main(String[] args) throws IOException {
 
 ![image-20230506015246272](/images/2023-01-03-(백준_필수3)알고리즘 템플릿 - cpp/image-20230506015246272.png)
 
+```java
+/**
+ * BOJ 11779
+ * 참고 : 다익스트라 특성상 경로를 여러개 구할 수 있기 때문에, 어떤 경로든 백준에서 정답 처리한다.
+ */
+static int[] d = new int[1005]; // 최단 거리 테이블
+static int[] pre = new int[1005]; // 이전 경로 기록
+
+public static void main(String[] args) throws IOException {
+    Arrays.fill(d, 100000000);
+    List<Pair>[] inArr = new ArrayList[1005];
+    for(int i = 0 ; i<1005; i++) inArr[i] = new ArrayList<>();
+    PriorityQueue<Pair> pq = new PriorityQueue<>(Pair::compareTo); // 최소힙
+
+    BufferedReader br = new BufferedReader(new InputStreamReader(System.in));
+    StringTokenizer stk = new StringTokenizer(br.readLine());
+    int N = Integer.parseInt(stk.nextToken());
+    stk = new StringTokenizer(br.readLine());
+    int M = Integer.parseInt(stk.nextToken());
+    for(int i = 0 ; i<M;i++) {
+        stk = new StringTokenizer(br.readLine(), " ");
+        int u = Integer.parseInt(stk.nextToken());
+        int v = Integer.parseInt(stk.nextToken());
+        int w = Integer.parseInt(stk.nextToken());
+        inArr[u].add(new Pair(v, w));
+    }
+    stk = new StringTokenizer(br.readLine(), " ");
+    int st = Integer.parseInt(stk.nextToken()); // 시작 노드
+    int en = Integer.parseInt(stk.nextToken()); // 도착 노드
+    // input 끝
+
+    // run
+    d[st] = 0; // 시작 노드는 가중치 0
+    pq.add(new Pair(st, d[st])); // 도착노드, 가중치
+    while(!pq.isEmpty()) {
+        Pair cur = pq.peek(); pq.remove();
+        // 예로 시작 노드 d[st]가 0인지 먼저 확인
+        // => 일치하지 않으면 큐에있는 cur 은 최단 거리가 아닌 원소라 continue
+        if(d[cur.v] != cur.w) continue;
+        for(Pair nxt : inArr[cur.v]) {
+            if(d[nxt.v] <= d[cur.v]+nxt.w) continue; // 거리 비교
+            d[nxt.v] = d[cur.v]+nxt.w;
+            pq.add(new Pair(nxt.v, d[nxt.v]));
+            pre[nxt.v] = cur.v; // 이전 경로 기록
+        }
+    }
+
+    // output
+    System.out.println(d[en]); // 최소 비용
+    // 경로 구해서 출력
+    List<Integer> path = new ArrayList<>();
+    int cur = en;
+    while(cur != st) {
+        path.add(cur);
+        cur = pre[cur];
+    }
+    path.add(cur);
+    System.out.println(path.size());
+    StringBuilder sb = new StringBuilder();
+    for(int i = path.size()-1; i>=0; i--) {
+        sb.append(path.get(i)).append(' ');
+    }
+    System.out.println(sb);
+}
+static class Pair {
+    private int v; // 도착노드
+    private int w; // 가중치
+    public Pair(int v, int w) {
+        this.v = v;
+        this.w = w;
+    }
+    // 우선순위 큐 비교 직접 커스텀
+    public int compareTo(Pair p) {
+        if(this.w < p.w) {
+            return -1;
+        }
+        return 1;
+    }
+}
+```
+
 <br><br>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 ## 컴퓨터그래픽스 관련
 
