--- a/_posts/Coding_Test/Baekjoon_Concept/2023-01-11-(백준_필수3)알고리즘 템플릿 - java.md
+++ b/_posts/Coding_Test/Baekjoon_Concept/2023-01-11-(백준_필수3)알고리즘 템플릿 - java.md
@@ -60,6 +60,7 @@ class MyClass {
 * `reference type` 힙 사용 및 주소값 복사(얕은 복사)
   * Array, Object, String 등등
   * **단, `String`은 값이 바뀔때 새로운 메모리 주소에 값을 생성하기 때문에 "깊은 복사" 로 생각하기도 하지만 기본 동작은 "얕은 복사" 라는점을 잘 이해하자**
+* **c++의 STL은 깊은 복사가 이루어지는데, 이 때문에 java에서 혼동이 많이 왔었다. 잘 구분!!**
 
 ```java
 String a = "hello"; // a : hello
@@ -1975,26 +1976,6 @@ static class Pair {
 
 <br><br>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 ## 컴퓨터그래픽스 관련
 
 **CCW, 교차여부, 다각형 면적, 다각형 포함, 볼록 껍질(외피=Convex Hull), 평면 소거법(직사각형 합집합=Plane Sweeping) 관련**
@@ -2003,108 +1984,123 @@ static class Pair {
 
 <br>
 
-### 1. 기본 기하 연산(between, intersect)
+### 1. 기본 기하 연산(between, interaction)
 
-```c++
+* **between, interaction 함수만 보면 충분!!**
+
+```java
 /*
+EX : BOJ 17387
 ccw 함수(cw : counter clockwise = 시계방향)
-leftTurn, rightTurn, collinear 함수 : 좌,우,일직선 검사
-direction 함수 : 세점의 회전방향 검사에 따라서 1,-1,0 반환
+direction 함수 : 세점의 회전방향 검사에 따라서 1,-1,0 반환(오른손 활용)
 between 함수 : 점 c가 선분 (a,b)에 위치하는가 검사
-intersectProp 함수 : 교차여부를 구하는데, 선분의 끝점이 교차점 허용하지 않는 경우
-intersect 함수 : 교차여부를 구하는데, 선분의 끝점이 교차점 허용하는 경우
-
-이 중에서 between, intersect 가 중요
+interactionProp 함수 : 교차여부를 구하는데, 선분의 끝점이 교차점 허용하지 않는 경우
+interaction 함수 : 교차여부를 구하는데, 선분의 끝점이 교차점 허용하는 경우
 
 자료형 왠만하면 long long 쓰자
 */
-
-#include<iostream>
-using namespace std;
-
-struct point {
-	long long x;
-	long long y;
-};
-typedef point Point;
-
-// OP벡터, OQ벡터 (O는 원점)
-// det(행렬식) => q가 p에 어느 방향인지 출력
-long long ccw2(Point p, Point q) {
-	return p.x * q.y - p.y * q.x;
+public static List<Point> inArr = new ArrayList<>();
+public static long ccw(Point a, Point b, Point c) {
+    // 깊은 복제
+    Point a1 = new Point(a.x, a.y);
+    Point b1 = new Point(b.x, b.y);
+    Point c1 = new Point(c.x, c.y);
+    // 원점 이동
+    a1.x -= c1.x;
+    a1.y -= c1.y;
+    b1.x -= c1.x;
+    b1.y -= c1.y;
+    // det(행렬식) 계산
+    return a1.x*b1.y-a1.y*b1.x;
 }
 
-// RP벡터, RQ벡터 => 시점R을 원점으로 만들어서 계산
-// 시점을 원점으로 이동 : p-r, q-r
-int ccw(Point r, Point p, Point q) {
-	p.x -= r.x;
-	p.y -= r.y;
-	q.x -= r.x;
-	q.y -= r.y;
-	return ccw2(p, q);
+public static int direction(Point a, Point b, Point c) {
+    // 좌 : 1, 우 : -1, 일 : 0
+    if(ccw(a,b,c) > 0) return 1;
+    if(ccw(a,b,c) < 0) return -1;
+    return 0; // ccw(a,b,c)==0
 }
 
-// 세점 a,b,c의 회전방향이 좌,우,일직선인가 검사
-bool leftTurn(Point a, Point b, Point c) {
-	return ccw(a, b, c) > 0; // 좌회전 검사
-}
-bool rightTurn(Point a, Point b, Point c) {
-	return ccw(a, b, c) < 0; // 우회전 검사
-}
-bool collinear(Point a, Point b, Point c) {
-	return ccw(a, b, c) == 0; // 일직선 검사
-}
-
-// 선분 교차 검사를 위해 회전 방향에 따른 값 출력
-// 좌 : 1, 우 : -1, 일 : 0
-int direction(Point a, Point b, Point c) {
-	if (leftTurn(a,b,c)) return 1;
-	if (rightTurn(a,b,c)) return -1;
-	if (collinear(a,b,c)) return 0;
+// 점 c가 a,b직선 상에 존재하는지 판별함수
+public static boolean between(Point a, Point b, Point c) {
+    // 1. 일직선 상에 존재하나 먼저 확인
+    if (ccw(a, b, c) != 0) return false;
+    else {
+        // 2. 수직 여부 확인 후 범위제한
+        if (a.x == b.x) {
+            if ((c.y >= a.y && c.y <= b.y) || (c.y >= b.y && c.y <= a.y)) return true;
+        }
+        else {
+            if ((c.x >= a.x && c.x <= b.x) || (c.x >= b.x && c.x <= a.x)) return true;
+        }
+        return false;
+    }
 }
 
-// 점 c가 선분 (a,b)에 위치하는가
-bool between(Point a, Point b, Point c) {
-	if (!collinear(a, b, c)) return false; // 일직선 상에 없으면 false
-	// 아래부턴 일직선 상에 있으니까 범위제한만 주면 된다.
-	if (a.x != b.x) { // 수직선 아니면
-		
-		return (a.x <= c.x && c.x <= b.x) || (b.x <= c.x && c.x <= a.x);
-	}
-	else { // 수직선 이면
-		return (a.y <= c.y && c.y <= b.y) || (b.y <= c.y && c.y <= a.y);
-	}
+// 추가조건 : 교차점 포함(끝 점이 교차하는 그런것들 다 포함)
+public static int interaction(Point a, Point b, Point c, Point d) {
+    // (a,b,c)*(a,b,d) ==-1 && (c,d,a)*(c,d,b)==-1 성립하면 교차
+    // 추가조건 때문에 <=0로 판별
+    if (direction(a, b, c) * direction(a, b, d) <= 0 && direction(c, d, a) * direction(c, d, b) <= 0) {
+        // direction 함수는 방향만을 나타내기 때문에 만약 0인 경우 일직선상,
+        // 두 직선이 서로 접하는지 범위제한을 줘서 판단할 필요가 있음(between 함수 활용)
+        if (direction(a, b, c) * direction(a, b, d) == 0 && direction(c, d, a) * direction(c, d, b) == 0) {
+            // 점 c또는 d가 a,b직선 상에 존재하나 판단
+            // 점 a또는 b가 c,d직선 상에 존재하나 판단
+            if (between(a, b, c) || between(a, b, d)|| between(c, d, a) || between(c, d, b))
+                return 1;
+            else
+                return 0;
+        }
+        else
+            return 1;
+    }
+    else
+        return 0;
 }
 
-// 선분 교차 검사 (교차점 허용) => 선분 ab, cd
-int intersect(Point a, Point b, Point c, Point d) {
-	// (a,b,c)*(a,b,d) ==-1 && (c,d,a)*(c,d,b)==-1 성립하면 교차
-	// 추가조건 때문에 <=0로 판별
-	if (direction(a, b, c) * direction(a, b, d) <= 0 && direction(c, d, a) * direction(c, d, b) <= 0) {
-		// direction함수는 방향만을 나타내기 때문에 만약 0인 경우 일직선상인 건데,
-		// 두 직선이 서로 접하는지 범위제한을 줘서 판단할 필요가 있음(between 함수 활용)
-		if (direction(a, b, c) * direction(a, b, d) == 0 && direction(c, d, a) * direction(c, d, b) == 0) {
-			// 점 c또는 d가 a,b직선 상에 존재하나 판단
-			// 점 a또는 b가 c,d직선 상에 존재하나 판단
-			if (between(a, b, c) || between(a, b, d)|| between(c, d, a) || between(c, d, b)) {
-				return 1;
-			}
-			else
-				return 0;
-		}
-		return 1;
-	}
-	else
-		return 0;
-}
-
+// <참고>
 // 선분 교차 검사 (교차점 제외) => 선분 ab, cd
-bool intersectProp(Point a, Point b, Point c, Point d) {
+bool interactionProp(Point a, Point b, Point c, Point d) {
+    // (a,b,c)*(a,b,d) ==-1 && (c,d,a)*(c,d,b)==-1 성립하면 교차
 	return direction(a, b, c) * direction(a, b, d) < 0 && direction(c, d, a) * direction(c, d, b) < 0;
+}
+
+public static void main(String[] args) throws IOException {
+    // input
+    BufferedReader br = new BufferedReader(new InputStreamReader(System.in));
+    StringTokenizer stk;
+    for(int i = 0 ; i<2;i++){
+        stk = new StringTokenizer(br.readLine(), " ");
+        long x1 = Long.parseLong(stk.nextToken());
+        long y1 = Long.parseLong(stk.nextToken());
+        long x2 = Long.parseLong(stk.nextToken());
+        long y2 = Long.parseLong(stk.nextToken());
+        inArr.add(new Point(x1,y1)); // 직선 1개
+        inArr.add(new Point(x2,y2)); // 직선 1개
+    }
+    // run & output
+    System.out.println(interaction(inArr.get(0), inArr.get(1), inArr.get(2),inArr.get(3)));
+}
+static class Point {
+    long x; long y;
+    public Point(long x, long y) {
+        this.x = x; this.y = y;
+    }
 }
 ```
 
 <br>
+
+
+
+
+
+
+
+
+
+
 
 ### 2. 다각형 면적과 포함 계산
 
