--- a/_posts/ML&DL/Machine_Learning(머신러닝)/2023-04-02-[1차] AI(인공지능) 이란.md
+++ b/_posts/ML&DL/Machine_Learning(머신러닝)/2023-04-02-[1차] AI(인공지능) 이란.md
@@ -1,6 +1,6 @@
 ---
 layout: single
-title:  "[1장] AI(인공지능) 이란"
+title:  "[1차] AI(인공지능) 이란"
 categories: Machine_Learning
 tag: [python, machine_learning, concept]
 toc: true
